# Hybrid-QNNs

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  colab_setup.md  colab_template.ipynb  download_dataset.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_experiments.py  setup.py  test_setup.py
configs/: no_entanglement.yaml  varied_entanglement.yaml  with_entanglement.yaml
experiments/: no_entanglement.py  varied_entanglement.py  with_entanglement.py
results/: .gitkeep
scripts/: analyze_results.py  setup_environment.py  visualize.py
src/: __init__.py  utils.py
src/classical/: __init__.py  trainer.py
src/metrics/: __init__.py
src/quantum/: __init__.py  models.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/: __init__.py  test_quantum_models.py  test_trainer.py  test_utils.py
